fix(home): add 1024px media query to prevent visual glitch on tablet screens

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,7 +9,7 @@
   padding: 40px 40px;
   border-radius: 25px;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1200px) {
     grid-template-columns: 1fr 1fr;
     margin: vars.$margin-tablet;
   }
